# drf-filter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
book/: admin.py  urls.py
book/filters/: author_filter.py  book_filter.py
book/management/commands/: generate_book_data.py  load_initial_data.py
book/migrations/: 0001_initial.py  0002_readinglist_readinglist_unique_user_book_readinglist.py
book/models/: author.py  book.py  reading_list.py
book/serializers/: author_serializer.py  book_serializer.py
book/services/: book_export_service.py
book/tests/filters/: test_author_filter.py
book/tests/test_utils/factories/: author_factory.py  book_factory.py
book/views/: author_view.py  book_view.py
core/: renderers.py
core/fixtures/: users.json
core/migrations/: __init__.py
core/tests/: plugin.py
core/tests/test_utils/: models.py
core/tests/test_utils/factories/: unique_faker.py
core/tests/utils/: test_admin_utils.py
core/utils/: admin_utils.py
drf_filter/: asgi.py  settings.py  urls.py  wsgi.py
drf_filter/settings/: base.py  test.py
